Analyzes simple payments, Minor style adjustments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/txview_h2"
         android:hint="0.000,00"
+        android:textColorHint="@color/text_hint"
         android:padding="2dp"
         android:text=""
         android:textSize="@dimen/txview_h1"
@@ -187,7 +188,8 @@
         android:id="@+id/text1"
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/txview_h2"
-        android:hint="0400-1234567"
+        android:hint="Ej: 0400-1234567"
+        android:textColorHint="@color/text_hint"
         android:padding="2dp"
         android:text=""
         android:textSize="@dimen/txview_h1"
@@ -199,7 +201,8 @@
         android:id="@+id/text2"
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/txview_h2"
-        android:hint="1234567"
+        android:hint="Ej: 1234567"
+        android:textColorHint="@color/text_hint"
         android:padding="2dp"
         android:text=""
         android:textSize="@dimen/txview_h1"
@@ -214,7 +217,8 @@
         android:id="@+id/text3"
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/txview_h2"
-        android:hint="V0.000.000"
+        android:hint="Ej: V0.000.000"
+        android:textColorHint="@color/text_hint"
         android:padding="2dp"
         android:text=""
         android:textSize="@dimen/txview_h1"
@@ -228,7 +232,8 @@
         android:id="@+id/text4"
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/txview_h2"
-        android:hint="0000 Banco"
+        android:hint="Ej: 0000 Banco"
+        android:textColorHint="@color/text_hint"
         android:padding="2dp"
         android:text=""
         android:textSize="@dimen/txview_h1"
