--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,53 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textV7"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/txview_h1"
+        android:layout_marginTop="20dp"
+
+
+        android:padding="2dp"
+        android:text="Escanear Imagen"
+        android:textAlignment="center"
+        android:textSize="@dimen/inner_text_1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/text1"
+        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttRe"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/button_h1"
+        android:padding="2dp"
+        android:text="Recargar"
+
+        android:textSize="@dimen/inner_text_1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/spin1"
+        app:layout_constraintTop_toBottomOf="@+id/textV" />
+
+    <TextView
+        android:id="@+id/textV6"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/txview_h1"
+        android:layout_marginTop="8dp"
+
+        android:padding="2dp"
+        android:text="Precio Dolar"
+        android:textSize="@dimen/inner_text_1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/spin1"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
         android:id="@+id/textV"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:padding="2dp"
         android:text="Seleccione Tasa:"
         android:textSize="@dimen/inner_text_1"
@@ -26,7 +69,7 @@
         android:id="@+id/textV5"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         android:padding="2dp"
         android:text="Monto"
         android:textSize="@dimen/inner_text_1"
@@ -40,7 +83,7 @@
         android:id="@+id/textV4"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         android:padding="2dp"
         android:text="Codg. Banco"
         android:textSize="@dimen/inner_text_1"
@@ -54,7 +97,7 @@
         android:id="@+id/textV3"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         android:padding="2dp"
         android:text="Cedula"
         android:textSize="@dimen/inner_text_1"
@@ -68,7 +111,7 @@
         android:id="@+id/textV2"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="1dp"
         android:padding="2dp"
         android:text="Tel sin Cod. Area"
         android:textSize="@dimen/inner_text_1"
@@ -80,8 +123,8 @@
 
     <TextView
         android:id="@+id/text6"
-        android:layout_width="311dp"
-        android:layout_height="116dp"
+        android:layout_width="320dp"
+        android:layout_height="148dp"
         android:hint="Test"
         android:padding="2dp"
         android:text=""
@@ -97,7 +140,6 @@
         android:id="@+id/butt6"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
-        android:layout_marginTop="28dp"
         android:padding="2dp"
 
         android:text="Copiar"
@@ -106,7 +148,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toEndOf="@+id/text5"
-        app:layout_constraintTop_toBottomOf="@+id/butt5" />
+        app:layout_constraintTop_toBottomOf="@+id/textV5" />
 
     <TextView
         android:id="@+id/text5"
@@ -126,7 +168,6 @@
         android:id="@+id/butt5"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
-        android:layout_marginTop="28dp"
         android:padding="2dp"
         android:text="Copiar"
 
@@ -135,13 +176,12 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toEndOf="@+id/text4"
-        app:layout_constraintTop_toBottomOf="@+id/butt4" />
+        app:layout_constraintTop_toBottomOf="@+id/textV4" />
 
     <Button
         android:id="@+id/butt4"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
-        android:layout_marginTop="28dp"
 
         android:padding="2dp"
         android:text="Copiar"
@@ -151,13 +191,12 @@
 
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toEndOf="@+id/text3"
-        app:layout_constraintTop_toBottomOf="@+id/butt3" />
+        app:layout_constraintTop_toBottomOf="@+id/textV3" />
 
     <Button
         android:id="@+id/butt3"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
-        android:layout_marginTop="28dp"
 
         android:padding="2dp"
         android:text="Copiar"
@@ -167,7 +206,7 @@
 
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toEndOf="@+id/text2"
-        app:layout_constraintTop_toBottomOf="@+id/butt2" />
+        app:layout_constraintTop_toBottomOf="@+id/textV2" />
 
     <Button
         android:id="@+id/butt2"
@@ -185,16 +224,16 @@
 
     <Button
         android:id="@+id/butt1"
-        android:layout_width="@dimen/txview_wm"
+        android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
 
         android:padding="2dp"
         android:text="Pegar"
         android:textSize="@dimen/inner_text_1"
 
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/spin1"
+        app:layout_constraintTop_toBottomOf="@+id/dollarView"
         tools:ignore="SpUsage" />
 
     <TextView
@@ -258,7 +297,7 @@
 
     <Button
         android:id="@+id/butt7"
-        android:layout_width="@dimen/txview_wm"
+        android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/button_h1"
         android:layout_marginTop="20dp"
 
@@ -271,6 +310,26 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/text5"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="SpUsage" />
+
+    <Button
+        android:id="@+id/butt8"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/button_h1"
+        android:layout_marginTop="20dp"
+
+
+        android:padding="2dp"
+
+        android:text="Copiar Debug"
+        android:textSize="@dimen/inner_text_1"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.441"
+        app:layout_constraintStart_toEndOf="@+id/text5"
         app:layout_constraintTop_toBottomOf="@+id/text5"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpUsage" />
@@ -293,7 +352,7 @@
         android:id="@+id/textV1"
         android:layout_width="@dimen/button_ws"
         android:layout_height="@dimen/txview_h1"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:padding="2dp"
         android:text="Tel + Cod. Area"
         android:textSize="@dimen/inner_text_1"
@@ -307,8 +366,6 @@
         android:id="@+id/spin1"
         android:layout_width="@dimen/spinner_w1"
         android:layout_height="@dimen/spinner_h1"
-        app:layout_constraintEnd_toStartOf="@+id/dollarView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/textV" />
 
@@ -316,31 +373,36 @@
         android:id="@+id/dollarView"
         android:layout_width="@dimen/txview_wm"
         android:layout_height="@dimen/txview_h2"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="148dp"
         android:padding="6dp"
         android:text="0"
-        android:textAlignment="center"
         android:textSize="@dimen/inner_text_2"
-        app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/textV6" />
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="105dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/txview_h2"
 
         android:text="Convertir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.546"
-        app:layout_constraintStart_toEndOf="@+id/butt1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.005"
+        app:layout_constraintStart_toEndOf="@+id/dollarView"
+        app:layout_constraintTop_toBottomOf="@+id/textV6"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <ImageButton
+        android:id="@+id/buttimag1"
+        android:layout_width="@dimen/button_ws"
+        android:layout_height="@dimen/button_h1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/text1"
+        app:layout_constraintTop_toBottomOf="@+id/textV7"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
