--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,11 +146,11 @@
 
         android:textSize="@dimen/inner_text_1"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toEndOf="@+id/input1"
+        app:layout_constraintStart_toEndOf="@+id/input2"
         app:layout_constraintTop_toBottomOf="@+id/textV5" />
 
     <com.example.copy_paste_bank.CurrencyEditText
-        android:id="@+id/input1"
+        android:id="@+id/input2"
         android:layout_width="@dimen/txview_wm2"
         android:layout_height="@dimen/input_h1"
         android:padding="2dp"
@@ -315,7 +315,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/input1"
+        app:layout_constraintTop_toBottomOf="@+id/input2"
         tools:ignore="SpUsage" />
 
     <Button
@@ -333,7 +333,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.441"
-        app:layout_constraintStart_toEndOf="@+id/input1"
+        app:layout_constraintStart_toEndOf="@+id/input2"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpUsage" />
 
@@ -371,6 +371,28 @@
         android:layout_height="@dimen/spinner_h1"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/textV" />
+
+    <com.example.copy_paste_bank.CurrencyEditText
+        android:id="@+id/input1"
+        android:layout_width="@dimen/txview_wm"
+        android:layout_height="@dimen/txview_h2"
+        android:ems="10"
+        android:focusable="true"
+        android:imeOptions="actionDone"
+        android:maxLength="20"
+        android:padding="6dp"
+
+        android:textSize="@dimen/inner_text_2"
+        android:visibility="invisible"
+
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/textV6"
+
+        app:localeTag="ES"
+        app:maxNumberOfDecimalDigits="2"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/dollarView"
